[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Powerup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.87854, -0.764648, 0, 0, 0, 0, 476.386, 3.13141, 0, 0, 0, 0, 480.282, 720.003, 0, 0, 0, 0, -2.8266, 718.055, 0, 0, 0, 0, -0.87854, -0.764648 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Enemy = ExtResource( 2 )
PowerUp = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -5.0
margin_right = 477.0
margin_bottom = 724.0
color = Color( 0.498039, 0.647059, 0.745098, 1 )

[node name="PowerUp" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="EnemyPath" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( -0.87854, -0.764648 )
rotation = 0.00816312

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -25.0
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
